Adicionados alguns arquivos e fotos.
Mais linhas de código, incluindo outros arquivos do bootstrap e adicionadas novas fotos para o layout do site.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 
 </head>
 <body>
@@ -18,10 +19,34 @@
 			</div>	
 
 		<!--TOP E-->
-			<div class="col-12 col-md-6">
+			<div class="col-12 col-md-6 top">
 				<a href="authonomous.html"><img class="img-responsive" src="fotos/authonomous.png"></a>
+				<a href="quantum.html"><img class="img-responsive top-right" src="fotos/quantum.png"></a>
 			</div>	
 		</header>
+
+		<!--BODY B-->
+		<div>
+			<section class="row">
+				<div class="col-12 col-md-6">
+					<h2>Tendências de T.I. segundo a Gartner em 2019.</h2>
+
+					<p>
+						<button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#authonomous" 
+						aria-expanded="false" aria-controls="authonomous">
+					    Authonomous
+					  	</button>
+					  	<div class="collapse" id="authonomous">
+						  	<div class="card card-body">
+						    	Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
+						  	</div>
+						</div>
+					</p>
+
+					
+				</div>				
+			</section>
+		</div>
 	</div>
 </body>
 </html>
