--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
+	<link href="css/style.css" rel="stylesheet" type="text/css">
+
 
 </head>
 <body>
@@ -21,7 +22,7 @@
 		<!--TOP E-->
 			<div class="col-12 col-md-6 top">
 				<a href="authonomous.html"><img class="img-responsive" src="fotos/authonomous.png"></a>
-				<a href="quantum.html"><img class="img-responsive top-right" src="fotos/quantum.png"></a>
+				<a href="quantum.html"><img class="img-responsive" src="fotos/quantum.png"></a>
 			</div>	
 		</header>
 
@@ -31,22 +32,26 @@
 				<div class="col-12 col-md-6">
 					<h2>Tendências de T.I. segundo a Gartner em 2019.</h2>
 
-					<p>
-						<button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#authonomous" 
-						aria-expanded="false" aria-controls="authonomous">
-					    Authonomous
-					  	</button>
-					  	<div class="collapse" id="authonomous">
-						  	<div class="card card-body">
-						    	Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
-						  	</div>
-						</div>
-					</p>
+					<div>
+						<button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+					    Botão com data-target
+						</button>
+					</div>
 
-					
+					<div class="collapse" id="collapseExample">
+					  <div class="card card-body">
+					    Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
+					  </div>
+					</div>
+
 				</div>				
 			</section>
 		</div>
+
 	</div>
+
+	<script src="js/bootstrap.js" type="text/javascript"></script>
+	<script src="js/jquery-3.3.1.min.js" type="text/javascript"></script>
+
 </body>
 </html>
