--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 
 	<link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
 	<link href="css/style.css" rel="stylesheet" type="text/css">
-
-
+	<script src="js/bootstrap.js" type="text/javascript"></script>
+	<script src="js/jquery-3.3.1.min.js" type="text/javascript"></script>
 </head>
 <body>
 	<div class="container-fluid">
@@ -21,8 +21,8 @@
 
 		<!--TOP E-->
 			<div class="col-12 col-md-6 top">
-				<a href="authonomous.html"><img class="img-responsive" src="fotos/authonomous.png"></a>
-				<a href="quantum.html"><img class="img-responsive" src="fotos/quantum.png"></a>
+				<a href="coisasautonomas.html"><img class="img-responsive" src="fotos/authonomous.png"></a>
+				<a href="computacaoquantica.html"><img class="img-responsive" src="fotos/quantum.png"></a>
 			</div>	
 		</header>
 
@@ -33,14 +33,42 @@
 					<h2>Tendências de T.I. segundo a Gartner em 2019.</h2>
 
 					<div>
-						<button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
-					    Botão com data-target
-						</button>
+						<a class="btn btn-primary" data-toggle="collapse" href="#coisasautonomas" role="button" aria-expanded="false" aria-controls="coisasautonomas">
+    					Coisas Autônomas
+  						</a>
+
+						<a class="btn btn-primary" data-toggle="collapse" href="#computacaoquantica" role="button" aria-expanded="false" aria-controls="computacaoquantica">
+    					Computação Quântica
+  						</a>
 					</div>
 
-					<div class="collapse" id="collapseExample">
+					<div class="collapse" id="coisasautonomas">
 					  <div class="card card-body">
-					    Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
+					  	<p>
+					    Objetos autônomos, como robôs, drones e veículos autônomos, utilizam Inteligência Artificial para automatizar funções antes exercidas por humanos. Sua automação vai além da oferecida por modelos rígidos de programação e explora IA para entregar comportamentos avançados capazes de interagir mais naturalmente com seu entorno e com pessoas. As coisas autônomas vêm em muitos tipos e operam em muitos ambientes com níveis variados de capacidade, coordenação e inteligência.<br><br> 
+
+						“À medida que as coisas autônomas proliferarem, elas passarão a ser colaborativas, com múltiplos dispositivos trabalhando, sem a interferência humana. Por exemplo, ao examinar uma área de plantio, um drone pode determinar que a cultura está pronta para a colheita e despachar uma colheita autônoma para realizar o trabalho. Já no mercado de entregas, será possível usar um veículo autônomo para mapear a área alvo. Robôs e drones a bordo do veículo podem garantir a entrega final do pacote”, diz o executivo.<br><br>
+
+						Exemplos de cenários de negócios incluem:<br><br>
+
+						- Prevenção do crime através de robôs de patrulha autônomos . A Microsoft, o Uber e outros gigantes da tecnologia estão usando robôs Knightscope K5 para prever e prevenir crimes usando robôs autônomos, análises e engajamento.
+						<br><br>
+						- Agricultura avançada. Projetos como a Iniciativa Nacional de Robótica dos EUA estão levando a automação agrícola para um novo nível. Exemplos incluem a criação de algoritmos de planejamento para robôs para operar farms de forma autônoma; ter veículos aéreos não tripulados (UAVs) operam com escoteiros humanos para estudar soluções para agricultores de culturas especiais; e agricultura vertical. 
+						<br><br>
+						- Transporte automóvel mais seguro. Empresas de alta tecnologia (como Alphabet, Tesla, Uber, Lyft e Apple) e empresas automotivas tradicionais (como Mercedes-Benz, BMW, Nissan, Toyota e Ford) esperam que, removendo o elemento de erro humano, carros autônomos diminuirão o número de acidentes automobilísticos. Até 2021, 10% dos novos veículos terão capacidade de condução autônoma, em comparação com menos de 1% em 2017.
+						</p>
+					  </div>
+					</div>
+
+					<div class="collapse" id="computacaoquantica">
+					  <div class="card card-body">
+					  	<p>
+					    A computação quântica é um tipo de computação não-clássica que se baseia no estado quântico de partículas subatômicas que representam informações como elementos denotados como bits quânticos ou “qubits”.<br><br>
+
+						Os computadores quânticos são um modelo de computação exponencialmente escalável e altamente paralelo. Uma maneira de imaginar a diferença entre computadores tradicionais e quânticos é imaginar uma gigantesca biblioteca de livros.
+						<br><br>
+						Enquanto um computador clássico leria todos os livros de uma biblioteca de maneira linear, um computador quântico leria todos os livros simultaneamente. Computadores quânticos são capazes de trabalhar teoricamente em milhões de cálculos de uma só vez. A computação quântica na forma de um serviço comercialmente disponível, acessível e confiável transformaria algumas indústrias.
+						</p>
 					  </div>
 					</div>
 
