--- a/index.html
+++ b/index.html
@@ -11,67 +11,67 @@
 	<script src="js/bootstrap.js" type="text/javascript"></script>
 	<script src="js/jquery-3.3.1.min.js" type="text/javascript"></script>
 </head>
+
 <body>
 	<div class="container-fluid">
 	
-		<header class="row no-gutters" id="top">
+		<header class="row no-gutters">
 		<!--TOP A-->
-			<div class="col-12 col-md-6">
+			<div class="col-12 col-md-6" id="topa">
 				<a href="index.html"><img class="img-responsive" src="fotos/logofatec.png"></a>
 			</div>	
 
 		<!--TOP E-->
-			<div class="col-12 col-md-6 top">
-				<a href="coisasautonomas.html"><img class="img-responsive" src="fotos/authonomous.png"></a>
-				<a href="computacaoquantica.html"><img class="img-responsive" src="fotos/quantum.png"></a>
+			<div class="col-12 col-md-6" id="tope">
+				<a href="coisasautonomas.html">
+					<img class="img-responsive" src="fotos/authonomous.png">
+				</a>
+				<a href="computacaoquantica.html">
+					<img class="img-responsive" src="fotos/quantum.png">
+				</a>
 			</div>	
 		</header>
 
 		<!--BODY B-->
-		<div>
+		<div id="body">
 			<section class="row">
-				<div class="col-12 col-md-6">
+				<div class="col-12 col-md-6 text-center">
 					<h2>Tendências de T.I. segundo a Gartner em 2019.</h2>
 
-					<div>
-						<a class="btn btn-primary" data-toggle="collapse" href="#coisasautonomas" role="button" aria-expanded="false" aria-controls="coisasautonomas">
-    					Coisas Autônomas
-  						</a>
+					<div class="text-center">
+						<p>
+							Blockchain, computação quântica, análise aumentada e inteligência artificial impulsionarão a interrupção e novos modelos de negócios.
+							<br><br>
+							Embora a ficção científica possa representar os robôs AI como os maus, alguns gigantes da tecnologia agora os empregam para a segurança. Empresas como Microsoft e Uber usam robôs Knightscope K5 para patrulhar estacionamentos e grandes áreas externas para prever e prevenir crimes. Os robôs podem ler placas de carros, relatar atividades suspeitas e coletar dados para relatar aos seus proprietários.
+							<br><br>
+							Esses robôs controlados por IA são apenas um exemplo de “coisas autônomas”, uma das dez principais tecnologias estratégicas da Gartner para 2019, com o potencial de gerar interrupções significativas e gerar oportunidades nos próximos cinco anos.
+							<br><br>
+							"O futuro será caracterizado por dispositivos inteligentes que fornecem serviços digitais cada vez mais esclarecedores em todos os lugares", disse David Cearley , analista de vice-presidente da Gartner , no Gartner 2018 Symposium / ITxpo, em Orlando, Flórida. "Nós chamamos isso de malha digital inteligente".
+							<br><br>
+							Inteligente: como a inteligência artificial está em praticamente todas as tecnologias existentes e criando categorias inteiramente novas.
+							<br>
+							Digital: Misturando os mundos digital e físico para criar um mundo imersivo.
+							<br>
+							Malha: Explorando conexões entre grupos de pessoas, empresas, dispositivos, conteúdo e serviços em expansão.
+							<br><br>
+							"As tendências em cada um desses três temas são um ingrediente-chave na condução de um processo contínuo de inovação como parte da próxima estratégia contínua", disse Cearley.<br><br>
 
-						<a class="btn btn-primary" data-toggle="collapse" href="#computacaoquantica" role="button" aria-expanded="false" aria-controls="computacaoquantica">
-    					Computação Quântica
-  						</a>
-					</div>
-
-					<div class="collapse" id="coisasautonomas">
-					  <div class="card card-body">
-					  	<p>
-					    Objetos autônomos, como robôs, drones e veículos autônomos, utilizam Inteligência Artificial para automatizar funções antes exercidas por humanos. Sua automação vai além da oferecida por modelos rígidos de programação e explora IA para entregar comportamentos avançados capazes de interagir mais naturalmente com seu entorno e com pessoas. As coisas autônomas vêm em muitos tipos e operam em muitos ambientes com níveis variados de capacidade, coordenação e inteligência.<br><br> 
-
-						“À medida que as coisas autônomas proliferarem, elas passarão a ser colaborativas, com múltiplos dispositivos trabalhando, sem a interferência humana. Por exemplo, ao examinar uma área de plantio, um drone pode determinar que a cultura está pronta para a colheita e despachar uma colheita autônoma para realizar o trabalho. Já no mercado de entregas, será possível usar um veículo autônomo para mapear a área alvo. Robôs e drones a bordo do veículo podem garantir a entrega final do pacote”, diz o executivo.<br><br>
-
-						Exemplos de cenários de negócios incluem:<br><br>
-
-						- Prevenção do crime através de robôs de patrulha autônomos . A Microsoft, o Uber e outros gigantes da tecnologia estão usando robôs Knightscope K5 para prever e prevenir crimes usando robôs autônomos, análises e engajamento.
-						<br><br>
-						- Agricultura avançada. Projetos como a Iniciativa Nacional de Robótica dos EUA estão levando a automação agrícola para um novo nível. Exemplos incluem a criação de algoritmos de planejamento para robôs para operar farms de forma autônoma; ter veículos aéreos não tripulados (UAVs) operam com escoteiros humanos para estudar soluções para agricultores de culturas especiais; e agricultura vertical. 
-						<br><br>
-						- Transporte automóvel mais seguro. Empresas de alta tecnologia (como Alphabet, Tesla, Uber, Lyft e Apple) e empresas automotivas tradicionais (como Mercedes-Benz, BMW, Nissan, Toyota e Ford) esperam que, removendo o elemento de erro humano, carros autônomos diminuirão o número de acidentes automobilísticos. Até 2021, 10% dos novos veículos terão capacidade de condução autônoma, em comparação com menos de 1% em 2017.
+							As tendências do Top 10 de Tecnologia Estratégica da Gartner destacam tendências em mudança ou ainda não amplamente reconhecidas que impactarão e transformarão as indústrias até 2023.
 						</p>
-					  </div>
 					</div>
 
-					<div class="collapse" id="computacaoquantica">
-					  <div class="card card-body">
-					  	<p>
-					    A computação quântica é um tipo de computação não-clássica que se baseia no estado quântico de partículas subatômicas que representam informações como elementos denotados como bits quânticos ou “qubits”.<br><br>
-
-						Os computadores quânticos são um modelo de computação exponencialmente escalável e altamente paralelo. Uma maneira de imaginar a diferença entre computadores tradicionais e quânticos é imaginar uma gigantesca biblioteca de livros.
-						<br><br>
-						Enquanto um computador clássico leria todos os livros de uma biblioteca de maneira linear, um computador quântico leria todos os livros simultaneamente. Computadores quânticos são capazes de trabalhar teoricamente em milhões de cálculos de uma só vez. A computação quântica na forma de um serviço comercialmente disponível, acessível e confiável transformaria algumas indústrias.
-						</p>
-					  </div>
-					</div>
+            		<footer class="row no-gutters">
+            		<!--FOOTER C-->
+                		<div class="col-12 col-md-6 footer_copy text-center" id="footerc">
+                   			Fatec Guaratinguetá - Linguagem de programação - Layout criado por Matheus Muniz para a atividade 4
+               			</div> 
+               		<!--FOOTER D-->
+                		<div class="col-12 col-md-6" id="footerd">
+                    		<a href="form.html">
+                        		<img class="img-responsive" src="fotos/faleconosco.png">                 
+                   			</a>
+                		</div>      
+            		</footer>     
 
 				</div>				
 			</section>
