--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
 		<!--BODY B-->
 		<div id="body">
 			<section class="row">
-				<div class="col-12 col-md-6 text-center">
+				<div class="col-12 col-md-6 text-justify">
 					<h2>Tendências de T.I. segundo a Gartner em 2019.</h2>
 
-					<div class="text-center">
+					<div class="text-justify">
 						<p>
 							Blockchain, computação quântica, análise aumentada e inteligência artificial impulsionarão a interrupção e novos modelos de negócios.
 							<br><br>
