--- a/coisasautonomas.html
+++ b/coisasautonomas.html
@@ -11,26 +11,31 @@
 	<script src="js/bootstrap.js" type="text/javascript"></script>
 	<script src="js/jquery-3.3.1.min.js" type="text/javascript"></script>
 </head>
+
 <body>
 	<div class="container-fluid">
-		
-		<header class="row no-gutters" id="top">
+	
+		<header class="row no-gutters">
 		<!--TOP A-->
-			<div class="col-12 col-md-6">
+			<div class="col-12 col-md-6" id="topa">
 				<a href="index.html"><img class="img-responsive" src="fotos/logofatec.png"></a>
 			</div>	
 
 		<!--TOP E-->
-			<div class="col-12 col-md-6 top">
-				<a href="coisasautonomas.html"><img class="img-responsive" src="fotos/authonomous.png"></a>
-				<a href="computacaoquantica.html"><img class="img-responsive" src="fotos/quantum.png"></a>
+			<div class="col-12 col-md-6" id="tope">
+				<a href="coisasautonomas.html">
+					<img class="img-responsive" src="fotos/authonomous.png">
+				</a>
+				<a href="computacaoquantica.html">
+					<img class="img-responsive" src="fotos/quantum.png">
+				</a>
 			</div>	
 		</header>
 
 		<!--BODY B-->
-		<div>
+		<div id="body">
 			<section class="row">
-				<div class="col-12 col-md-6">
+				<div class="col-12 col-md-6 text-justify">
 					<h2>Tendências de T.I. segundo a Gartner em 2019.</h2>
 
 					<div>
@@ -56,6 +61,19 @@
 						</p>
 					  </div>
 					</div>
+
+				<footer class="row no-gutters">
+            		<!--FOOTER C-->
+                		<div class="col-12 col-md-6 footer_copy text-center" id="footerc">
+                   			Fatec Guaratinguetá - Linguagem de programação - Layout criado por Matheus Muniz para a atividade 4
+               			</div> 
+               		<!--FOOTER D-->
+                		<div class="col-12 col-md-6" id="footerd">
+                    		<a href="form.html">
+                        		<img class="img-responsive" src="fotos/faleconosco.png">                 
+                   			</a>
+                		</div>      
+            		</footer>     
 
 				</div>				
 			</section>
