--- a/coisasautonomas.html
+++ b/coisasautonomas.html
@@ -35,10 +35,10 @@
 		<!--BODY B-->
 		<div id="body">
 			<section class="row">
-				<div class="col-12 col-md-6 text-justify">
-					<h2>Tendências de T.I. segundo a Gartner em 2019.</h2>
+				<div class="col-12 col-md-12 text-justify">
+					<h2 class="text-center">Tendências de T.I. segundo a Gartner em 2019.</h2>
 
-					<div>
+					<div class="text-center">
 						<a class="btn btn-primary" data-toggle="collapse" href="#coisasautonomas" role="button" aria-expanded="false" aria-controls="coisasautonomas">
     					Coisas Autônomas
   						</a>
@@ -60,25 +60,22 @@
 						- Transporte automóvel mais seguro. Empresas de alta tecnologia (como Alphabet, Tesla, Uber, Lyft e Apple) e empresas automotivas tradicionais (como Mercedes-Benz, BMW, Nissan, Toyota e Ford) esperam que, removendo o elemento de erro humano, carros autônomos diminuirão o número de acidentes automobilísticos. Até 2021, 10% dos novos veículos terão capacidade de condução autônoma, em comparação com menos de 1% em 2017.
 						</p>
 					  </div>
-					</div>
-
-				<footer class="row no-gutters">
-            		<!--FOOTER C-->
-                		<div class="col-12 col-md-6 footer_copy text-center" id="footerc">
-                   			Fatec Guaratinguetá - Linguagem de programação - Layout criado por Matheus Muniz para a atividade 4
-               			</div> 
-               		<!--FOOTER D-->
-                		<div class="col-12 col-md-6" id="footerd">
-                    		<a href="form.html">
-                        		<img class="img-responsive" src="fotos/faleconosco.png">                 
-                   			</a>
-                		</div>      
-            		</footer>     
-
+					</div>   
 				</div>				
 			</section>
 		</div>
-
+			<footer class="row no-gutters">
+            		<!--FOOTER C-->
+                		<div class="col-12 col-md-6" id="footerc">
+                   			<p class="font-weight-light">Fatec Guaratinguetá - Linguagem de programação - Layout criado por Matheus Muniz para a atividade 4</p>
+               			</div> 
+               		<!--FOOTER D-->
+                		<div class="col-12 col-md-6 text-center" id="footerd">
+                        	<a class="btn btn-primary" href="form.html" role="button" id="faleconosco">
+		    				Fale Conosco
+		  					</a>                 
+                		</div>      
+            		</footer> 
 	</div>
 
 	<script src="js/bootstrap.js" type="text/javascript"></script>
