--- a/computacaoquantica.html
+++ b/computacaoquantica.html
@@ -35,10 +35,10 @@
 		<!--BODY B-->
 		<div id="body">
 			<section class="row">
-				<div class="col-12 col-md-6 text-justify">
-					<h2>Tendências de T.I. segundo a Gartner em 2019.</h2>
+				<div class="col-12 col-md-12 text-justify">
+					<h2 class="text-center">Tendências de T.I. segundo a Gartner em 2019.</h2>
 
-					<div>
+					<div class="text-center">
 						<a class="btn btn-primary" data-toggle="collapse" href="#computacaoquantica" role="button" aria-expanded="false" aria-controls="computacaoquantica">
     					Computação Quântica
   						</a>
@@ -54,25 +54,22 @@
 						Enquanto um computador clássico leria todos os livros de uma biblioteca de maneira linear, um computador quântico leria todos os livros simultaneamente. Computadores quânticos são capazes de trabalhar teoricamente em milhões de cálculos de uma só vez. A computação quântica na forma de um serviço comercialmente disponível, acessível e confiável transformaria algumas indústrias.
 						</p>
 					  </div>
-					</div>
-
-				<footer class="row no-gutters">
-            		<!--FOOTER C-->
-                		<div class="col-12 col-md-6 footer_copy text-center" id="footerc">
-                   			Fatec Guaratinguetá - Linguagem de programação - Layout criado por Matheus Muniz para a atividade 4
-               			</div> 
-               		<!--FOOTER D-->
-                		<div class="col-12 col-md-6" id="footerd">
-                    		<a href="form.html">
-                        		<img class="img-responsive" src="fotos/faleconosco.png">                 
-                   			</a>
-                		</div>      
-            		</footer>     
-
+					</div>   
 				</div>				
 			</section>
 		</div>
-
+			<footer class="row no-gutters">
+            		<!--FOOTER C-->
+                		<div class="col-12 col-md-6" id="footerc">
+                   			<p class="font-weight-light">Fatec Guaratinguetá - Linguagem de programação - Layout criado por Matheus Muniz para a atividade 4</p>
+               			</div> 
+               		<!--FOOTER D-->
+                		<div class="col-12 col-md-6 text-center" id="footerd">
+                        	<a class="btn btn-primary" href="form.html" role="button" id="faleconosco">
+		    				Fale Conosco
+		  					</a>                 
+                		</div>      
+            		</footer> 
 	</div>
 
 	<script src="js/bootstrap.js" type="text/javascript"></script>
