--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	<link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
+	<link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">	
 	<link href="css/style.css" rel="stylesheet" type="text/css">
 	<script src="js/bootstrap.js" type="text/javascript"></script>
 	<script src="js/jquery-3.3.1.min.js" type="text/javascript"></script>
@@ -35,10 +35,10 @@
 		<!--BODY B-->
 		<div id="body">
 			<section class="row">
-				<div class="col-12 col-md-6 text-justify">
+				<div class="col-12 col-md-12">
 					<h2>Tendências de T.I. segundo a Gartner em 2019.</h2>
 
-					<div class="text-justify">
+					<div>
 						<p>
 							Blockchain, computação quântica, análise aumentada e inteligência artificial impulsionarão a interrupção e novos modelos de negócios.
 							<br><br>
@@ -58,25 +58,23 @@
 
 							As tendências do Top 10 de Tecnologia Estratégica da Gartner destacam tendências em mudança ou ainda não amplamente reconhecidas que impactarão e transformarão as indústrias até 2023.
 						</p>
-					</div>
-
-            		<footer class="row no-gutters">
-            		<!--FOOTER C-->
-                		<div class="col-12 col-md-6 footer_copy text-center" id="footerc">
-                   			Fatec Guaratinguetá - Linguagem de programação - Layout criado por Matheus Muniz para a atividade 4
-               			</div> 
-               		<!--FOOTER D-->
-                		<div class="col-12 col-md-6" id="footerd">
-                    		<a href="form.html">
-                        		<img class="img-responsive" src="fotos/faleconosco.png">                 
-                   			</a>
-                		</div>      
-            		</footer>     
+					</div>  
 
 				</div>				
 			</section>
 		</div>
-
+				<footer class="row no-gutters">
+            		<!--FOOTER C-->
+                		<div class="col-12 col-md-6" id="footerc">
+                   			<p class="font-weight-light">Fatec Guaratinguetá - Linguagem de programação - Layout criado por Matheus Muniz para a atividade 4</p>
+               			</div> 
+               		<!--FOOTER D-->
+                		<div class="col-12 col-md-6 text-center" id="footerd">
+                        	<a class="btn btn-primary" href="form.html" role="button" id="faleconosco">
+		    				Fale Conosco
+		  					</a>                 
+                		</div>      
+            		</footer> 
 	</div>
 
 	<script src="js/bootstrap.js" type="text/javascript"></script>
